# jogos

./: .editorconfig  .eslintrc.js  .gitlab-ci.yml  LICENSE  README.md  io.github.alessandrojean.jogos.json  meson.build  org.jogos.Jogos.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
build-aux/flatpak/: io.github.alessandrojean.jogos.json  org.jogos.Jogos.json
data/: io.github.alessandrojean.jogos.data.gresource.xml  io.github.alessandrojean.jogos.desktop.in  io.github.alessandrojean.jogos.gschema.xml  io.github.alessandrojean.jogos.metainfo.xml.in  meson.build  org.jogos.Jogos.data.gresource.xml  org.jogos.Jogos.desktop.in  org.jogos.Jogos.gschema.xml  org.jogos.Jogos.metainfo.xml.in  style-hc.css  style.css  window.ui
data/icons/: meson.build
data/ui/: create-dialog.blp  create-game-dialog.blp  details-dialog.blp  edit-dialog.blp  edit-game-dialog.blp  game-details-dialog.blp  game-grid-item.blp  game-title-column.blp  games-view.blp  games.blp  help-overlay.blp  online-game-result.blp  preferences-dialog.blp  sidebar-item.blp  window.blp
po/: POTFILES.in  meson.build
src/: application.ts  io.github.alessandrojean.jogos.src.gresource.xml  main.ts  meson.build  org.jogos.Jogos.in  org.jogos.Jogos.src.gresource.xml  settings.ts  window.ts
src/games/: createGameDialog.ts  editGameDialog.ts  gameDetailsDialog.ts  gameGridItem.ts  gameTitleColumn.ts  gamesView.ts  onlineGameResult.ts
src/igdb/: api.ts
src/lib/: fetch.ts
src/model/: certification.ts  currency.ts  game.ts  gameCondition.ts  platform.ts  storageMedia.ts
src/repositories/: database.ts  games.ts
src/utils/: convertCover.ts  cover.ts  createFolder.ts  debugInfo.ts  locale.ts  validators.ts
src/widgets/: contextMenuBin.ts  createDialog.ts  detailsDialog.ts  editDialog.ts  gameGridItem.ts  gameTitleColumn.ts  games.ts  preferencesDialog.ts  sidebarItem.ts
types/: ambient.d.ts  gettext.d.ts
